Webspark WYSIWYG 7.x-1.3-dev, 2015-1-30
------------------------------
- Removed features_overrides settings

Webspark WYSIWYG 7.x-1.3-dev, 2015-1-30
------------------------------
- Changes to the wysiwyg text format to accomodate anchor tags

Webspark WYSIWYG 7.x-1.2-dev, 2015-1-26
------------------------------
- Added image styles for oval, rounded corners and thumbnail (double border)
- Added hr and anchor buttons; removed font and regular paste buttons

Webspark WYSIWYG 7.x-1.1-dev, 2014-11-24
------------------------------
- Added Full HTML text format for admin
- Included perms in module config settings
- Added tables to HTML text format