@@ -41,6 +41,7 @@ function webspark_wysiwyg_wysiwyg_default_profiles_alter(&$data) {
       'template' => 1,
     ); /* WAS: '' */
     $data['panopoly_wysiwyg_text']['settings']['css_classes'] = 'Lead paragraph=lead-paragraph
+        Bordered table=bordered
         Image align left=pull-left
         Image align right=pull-right
         Oval image=img-circle
