@@ -2,7 +2,7 @@ name = Webspark WYSIWYG
 description = Adds additional settings to the Panopoly WYSIWYG feature
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.4
+version = 7.x-1.5
 project = webspark_wysiwyg
 dependencies[] = caption_filter
 dependencies[] = defaultconfig
